# window-funcs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  prefix_sum2.rs
